--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -225,25 +225,101 @@
      <Compile Include="Assets\GooglePlayGames\Platforms\PlayGamesClientFactory.cs" />
      <Compile Include="Assets\GooglePlayGames\Platforms\TokenClient.cs" />
      <Compile Include="Assets\GooglePlayGames\PluginVersion.cs" />
-     <Compile Include="Assets\PhotonChatApi\ChatChannel.cs" />
-     <Compile Include="Assets\PhotonChatApi\ChatClient.cs" />
-     <Compile Include="Assets\PhotonChatApi\ChatDisconnectCause.cs" />
-     <Compile Include="Assets\PhotonChatApi\ChatEventCode.cs" />
-     <Compile Include="Assets\PhotonChatApi\ChatOperationCode.cs" />
-     <Compile Include="Assets\PhotonChatApi\ChatParameterCode.cs" />
-     <Compile Include="Assets\PhotonChatApi\ChatPeer.cs" />
-     <Compile Include="Assets\PhotonChatApi\ChatState.cs" />
-     <Compile Include="Assets\PhotonChatApi\ChatUserStatus.cs" />
-     <Compile Include="Assets\PhotonChatApi\IChatClientListener.cs" />
-     <Compile Include="Assets\PhotonLoadbalancingApi\Extensions.cs" />
-     <Compile Include="Assets\PhotonLoadbalancingApi\FriendInfo.cs" />
-     <Compile Include="Assets\PhotonLoadbalancingApi\LoadBalancingClient.cs" />
-     <Compile Include="Assets\PhotonLoadbalancingApi\LoadBalancingPeer.cs" />
-     <Compile Include="Assets\PhotonLoadbalancingApi\Player.cs" />
-     <Compile Include="Assets\PhotonLoadbalancingApi\Room.cs" />
-     <Compile Include="Assets\PhotonLoadbalancingApi\RoomInfo.cs" />
-     <Compile Include="Assets\PhotonLoadbalancingApi\WebRpc.cs" />
+     <Compile Include="Assets\PlayFabSdk\Admin\PlayFabAdminAPI.cs" />
+     <Compile Include="Assets\PlayFabSdk\Admin\PlayFabAdminModels.cs" />
+     <Compile Include="Assets\PlayFabSdk\Admin\PlayFabEvents.cs" />
+     <Compile Include="Assets\PlayFabSdk\Admin\PlayFabSettings.cs" />
+     <Compile Include="Assets\PlayFabSdk\Client\PlayFabClientAPI.cs" />
+     <Compile Include="Assets\PlayFabSdk\Client\PlayFabClientModels.cs" />
+     <Compile Include="Assets\PlayFabSdk\Client\PlayFabEvents.cs" />
+     <Compile Include="Assets\PlayFabSdk\Client\PlayFabIdfa.cs" />
+     <Compile Include="Assets\PlayFabSdk\Client\PlayFabSettings.cs" />
+     <Compile Include="Assets\PlayFabSdk\Matchmaker\PlayFabEvents.cs" />
+     <Compile Include="Assets\PlayFabSdk\Matchmaker\PlayFabMatchmakerAPI.cs" />
+     <Compile Include="Assets\PlayFabSdk\Matchmaker\PlayFabMatchmakerModels.cs" />
+     <Compile Include="Assets\PlayFabSdk\Server\PlayFabEvents.cs" />
+     <Compile Include="Assets\PlayFabSdk\Server\PlayFabServerAPI.cs" />
+     <Compile Include="Assets\PlayFabSdk\Server\PlayFabServerModels.cs" />
+     <Compile Include="Assets\PlayFabSdk\Server\PlayFabSettings.cs" />
+     <Compile Include="Assets\PlayFabSdk\Server\PlayStream\PlayFabPlayStreamAPI.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Internal\ISerializer.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Internal\Log.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Internal\PlayFabHttp\IPlayFabHttp.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Internal\PlayFabHttp\PlayFabHTTP.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Internal\PlayFabHttp\PlayFabWWW.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Internal\PlayFabHttp\PlayFabWebRequest.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Internal\PlayFabSignalR\IPlayFabSignalR.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Internal\PlayFabSignalR\PlayFabSignalR.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Internal\SimpleJson.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Internal\SingletonMonoBehaviour.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Internal\Util.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Internal\wsaReflectionExtensions.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Ionic.Zlib\CRC32.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Ionic.Zlib\Deflate.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Ionic.Zlib\DeflateStream.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Ionic.Zlib\GZipStream.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Ionic.Zlib\InfTree.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Ionic.Zlib\Inflate.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Ionic.Zlib\ParallelDeflateOutputStream.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Ionic.Zlib\ZTree.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Ionic.Zlib\Zlib.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Ionic.Zlib\ZlibBaseStream.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Ionic.Zlib\ZlibCodec.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Ionic.Zlib\ZlibConstants.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Ionic.Zlib\ZlibStream.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Models\PlayFabSharedSettings.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Models\SharedModels.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Public\PlayFabDataGatherer.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Public\PlayFabEvents.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Public\PlayFabLogger.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Public\PlayFabSettings.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\Public\PlayStream\PlayStreamEventDataModels.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Connection.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\ConnectionExtensions.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\DisposableAction.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Http\CallbackDetail.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Http\DefaultHttpClient.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Http\HttpHelper.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Http\HttpWebRequestWrapper.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Http\HttpWebResponseWrapper.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Http\IHttpClient.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Http\IHttpClientExtensions.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Http\IRequest.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Http\IResponse.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Http\RequestState.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Hubs\HubConnection.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Hubs\HubInvocation.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Hubs\HubMethodAttribute.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Hubs\HubProxy.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Hubs\HubRegistrationData.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Hubs\HubResult.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Hubs\Hubservable.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Hubs\IHubProxy.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Hubs\IObservable.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Hubs\IObserver.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Hubs\ProxyExtensions.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Hubs\Subscription.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\IConnection.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Infrastructure\ChunkBuffer.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Infrastructure\DisposableAction.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Infrastructure\StreamExtensions.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Infrastructure\StreamState.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Infrastructure\UriQueryUtility.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\NegotiationResponse.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Properties\AssemblyInfo.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Transports\AsyncStreamReader.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Transports\AutoTransport.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Transports\CancellationTokenSource.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Transports\CustomEventArgs.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Transports\EventSignal.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Transports\HttpBasedTransport.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Transports\IClientTransport.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Transports\LongPollingTransport.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Transports\OptionalEventSignal.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Transports\ServerSentEventsTransport.cs" />
+     <Compile Include="Assets\PlayFabSdk\Shared\SignalR.NET20\Transports\SseEvent.cs" />
      <Compile Include="Assets\Scripts\CommonManager.cs" />
+     <Compile Include="Assets\Scripts\GameFinishManager.cs" />
      <Compile Include="Assets\Scripts\MainMenuManager.cs" />
      <Compile Include="Assets\Scripts\ManagerButtonsEvent.cs" />
      <Compile Include="Assets\Scripts\OnlineServices\AuthenticationService.cs" />
@@ -257,12 +333,12 @@
      <Compile Include="Assets\Scripts\PlayboardOnlineVersusManager.cs" />
      <Compile Include="Assets\Scripts\Preferences.cs" />
      <Compile Include="Assets\Scripts\Utilities.cs" />
+     <None Include="Assets\PlayFabSdk\link.xml" />
      <None Include="Assets\Plugins\Android\MainLibProj\AndroidManifest.xml" />
      <None Include="Assets\GooglePlayGames\Editor\template-GameInfo.txt" />
      <None Include="Assets\GooglePlayGames\Editor\template-AndroidManifest.txt" />
      <None Include="Assets\GooglePlayGames\Editor\template-Constants.txt" />
      <None Include="Assets\PlayServicesResolver\Editor\play-services-resolver.txt" />
-     <None Include="Assets\Plugins\Photon3Unity3D.xml" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
@@ -283,12 +359,6 @@
  </Reference>
  <Reference Include="UnityEngine.VR">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityVR/RuntimeEditor/UnityEngine.VR.dll</HintPath>
- </Reference>
- <Reference Include="Photon3Unity3D">
- <HintPath>F:/Development/Unity/Power Finger/Assets/Plugins/Photon3Unity3D.dll</HintPath>
- </Reference>
- <Reference Include="websocket-sharp">
- <HintPath>F:/Development/Unity/Power Finger/Assets/Plugins/PhotonWebGL/WebSocket/websocket-sharp.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
